API-5224 Fix textbox covering label in API documentation properties

--- a/app/styles/panels.less
+++ b/app/styles/panels.less
@@ -104,6 +104,7 @@
 
                 .control-label {
                     font-weight: 500;
+                    min-width: 170px;
                 }
 
                 .form-control[type="checkbox"] {
